--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
