--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^3.7.2",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
