--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "unsplash-js": "^6.0.0"
   },
   "scripts": {
